--- a/src/main/resources/templates/talent-application/create-talent-post.html
+++ b/src/main/resources/templates/talent-application/create-talent-post.html
@@ -113,13 +113,13 @@
                             <div>
                                 <label class="block text-sm font-medium text-gray-700 mb-1">Talent Name</label>
                                 <input type="text" th:field="*{talentName}"
-                                       class="block w-full rounded-md border-2 border-gray-300 px-3 py-1.5 text-sm shadow-sm focus:border-blue-500 focus:ring focus:ring-blue-200">
+                                       class="block w-full rounded-md border-2 border-gray-300 px-3 py-1.5 text-sm shadow-sm focus:border-blue-500 focus:ring focus:ring-blue-200" required>
                             </div>
 
                             <div>
                                 <label class="block text-sm font-medium text-gray-700 mb-1">status</label>
                                 <select th:field="*{status}"
-                                        class="block w-full rounded-md border-2 border-gray-300 px-3 py-1.5 text-sm shadow-sm focus:border-blue-500 focus:ring focus:ring-blue-200">
+                                        class="block w-full rounded-md border-2 border-gray-300 px-3 py-1.5 text-sm shadow-sm focus:border-blue-500 focus:ring focus:ring-blue-200" required>
                                     <option value="">Select Priority</option>
                                     <option value="open">Open</option>
                                     <option value="close">Close</option>
@@ -132,20 +132,20 @@
                                        th:field="*{dueDate}"
                                        onfocus="this.showPicker()"
                                        class="block w-full rounded-md border-2 border-gray-300 px-3 py-1.5 text-sm shadow-sm focus:border-blue-500 focus:ring focus:ring-blue-200 cursor-pointer"
-                                       style="position: relative; z-index: 10;">
+                                       style="position: relative; z-index: 10;" required>
                             </div>
 
                             <div class="md:col-span-2">
                                 <label class="block text-sm font-medium text-gray-700 mb-1">Description</label>
                                 <textarea th:field="*{description}" rows="2"
-                                          class="block w-full rounded-md border-2 border-gray-300 px-3 py-1.5 text-sm shadow-sm focus:border-blue-500 focus:ring focus:ring-blue-200"></textarea>
+                                          class="block w-full rounded-md border-2 border-gray-300 px-3 py-1.5 text-sm shadow-sm focus:border-blue-500 focus:ring focus:ring-blue-200" required></textarea>
                             </div>
                         </div>
 
                         <div class="mt-4 flex justify-end">
                             <button type="submit"
                                     class="w-full px-4 py-2 border border-transparent rounded-md shadow-sm text-sm font-medium text-white bg-blue-600 hover:bg-blue-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-blue-500">
-                                Submit Request
+                                Create
                             </button>
                         </div>
                     </form>
