--- a/src/main/resources/templates/talent-application/manage-talent-post.html
+++ b/src/main/resources/templates/talent-application/manage-talent-post.html
@@ -139,6 +139,7 @@
                                 <th class="px-4 py-2">Due Date</th>
                                 <th class="px-4 py-2">Status</th>
                                 <th class="px-4 py-2">Edit</th>
+                                <th class="px-4 py-2">Delete</th>
                             </tr>
                             </thead>
                             <tbody>
@@ -150,7 +151,14 @@
                                 <td class="px-4 py-2" th:text="${post.dueDate}"></td>
                                 <td class="px-4 py-2" th:text="${post.status}"></td>
                                 <td class="px-4 py-2">
-                                    <a th:href="@{/talentPost-form/update/{id}(id=${post.id})}" class="px-3 py-1 bg-blue-500 text-white rounded hover:bg-blue-600">Edit</a>
+                                    <a th:href="@{/talentPost-form/update/{id}(id=${post.id})}" class="text-center inline-block px-3 py-1 bg-blue-500 text-white rounded hover:bg-blue-600">Edit</a>
+                                </td>
+                                <td>
+                                <form th:action="@{/talentPost-form/delete/{id}(id=${post.id})}" method="post" >
+                                    <div class="px-4 py-2">
+                                    <button type="submit" class="px-3 py-1 bg-red-500 text-white rounded hover:bg-red-600">Delete</button>
+                                    </div>
+                                </form>
                                 </td>
                             </tr>
                             </tbody>
