--- a/src/main/resources/templates/talent-application/student-view-all-post-list.html
+++ b/src/main/resources/templates/talent-application/student-view-all-post-list.html
@@ -121,7 +121,7 @@
                                 <!--                                    <button class="w-full bg-blue-600 text-white py-2 rounded-md hover:bg-blue-700">-->
                                 <!--                                        Apply-->
                                 <!--                                    </button>-->
-                                <a type="button" th:href="@{/dashboard/student/talent-post/apply/{id}(id=${post.id})}" class="w-full bg-blue-600 text-white py-2 rounded-md hover:bg-blue-700">Detail</a>
+                                <a type="button" th:href="@{/dashboard/student/talent-post/apply/{id}(id=${post.id})}" class="inline-flex justify-center w-full bg-blue-600 text-white py-2 rounded-md hover:bg-blue-700">Detail</a>
                             </div>
                         </div>
 
