--- a/src/main/resources/templates/talent-application/update-talent-post.html
+++ b/src/main/resources/templates/talent-application/update-talent-post.html
@@ -114,13 +114,13 @@
               <div>
                 <label class="block text-sm font-medium text-gray-700 mb-1">Talent Name</label>
                 <input type="text" th:field="*{talentName}"
-                       class="block w-full rounded-md border-2 border-gray-300 px-3 py-1.5 text-sm shadow-sm focus:border-blue-500 focus:ring focus:ring-blue-200">
+                       class="block w-full rounded-md border-2 border-gray-300 px-3 py-1.5 text-sm shadow-sm focus:border-blue-500 focus:ring focus:ring-blue-200" required>
               </div>
 
               <div>
                 <label class="block text-sm font-medium text-gray-700 mb-1">status</label>
                 <select th:field="*{status}"
-                        class="block w-full rounded-md border-2 border-gray-300 px-3 py-1.5 text-sm shadow-sm focus:border-blue-500 focus:ring focus:ring-blue-200">
+                        class="block w-full rounded-md border-2 border-gray-300 px-3 py-1.5 text-sm shadow-sm focus:border-blue-500 focus:ring focus:ring-blue-200" required>
                   <option value="">Select Priority</option>
                   <option value="open">Open</option>
                   <option value="close">Close</option>
@@ -132,14 +132,14 @@
                 <input type="date"
                        th:field="*{dueDate}"
                        onfocus="this.showPicker()"
-                       class="block w-full rounded-md border-2 border-gray-300 px-3 py-1.5 text-sm shadow-sm focus:border-blue-500 focus:ring focus:ring-blue-200 cursor-pointer"
-                       style="position: relative; z-index: 10;">
+                       class="block w-full rounded-md border-2 border-gray-300 px-3 py-1.5 text-sm shadow-sm focus:border-blue-500 focus:ring focus:ring-blue-200 cursor-pointer required"
+                       style="position: relative; z-index: 10;" required>
               </div>
 
               <div class="md:col-span-2">
                 <label class="block text-sm font-medium text-gray-700 mb-1">Description</label>
                 <textarea th:field="*{description}" rows="2"
-                          class="block w-full rounded-md border-2 border-gray-300 px-3 py-1.5 text-sm shadow-sm focus:border-blue-500 focus:ring focus:ring-blue-200"></textarea>
+                          class="block w-full rounded-md border-2 border-gray-300 px-3 py-1.5 text-sm shadow-sm focus:border-blue-500 focus:ring focus:ring-blue-200" required></textarea>
               </div>
             </div>
 
