--- a/src/main/resources/templates/talent-application/manage-talent-post-candidate.html
+++ b/src/main/resources/templates/talent-application/manage-talent-post-candidate.html
@@ -366,7 +366,7 @@
                   <!-- Else if interview_status is '-' -->
                   <div class="flex space-x-2" >
                     <!-- Button for 'Create' -->
-                    <a th:href="@{/admin/interview/{id}(id=${post.interview_id})}"
+                    <a th:href="@{'/admin/interview/' + ${post.interview_id} + '?create=yes'}"
                             th:if="${post.interview_status == '-' && post.candidate_status != 'rejected' && post.candidate_status != 'approved'}"
                             class="inline-block px-3 py-1 text-xs font-medium rounded-md text-white bg-orange-600 hover:bg-orange-700 w">
                       Set Schedule
